<resources>
    <integer name="com_vk_sdk_AppId">7131672</integer>
    <string name="app_name">Расписание</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="donate_button">пожертвовать</string>
    <string name="setting_button">Настройки</string>
    <string name="achievement">Достижения</string>

    //welcome page

    <string name="zero_slide_main_text">Пришло время попрощаться со старым приложение СКСиПТ. Из-за утерянного исходного кода мне пришлось переписать его с нуля. На данный момент новое приложение работает намного лучше, а так же поддерживает новые API от Google. Я собирался выпустить его примерно в октябре, но из-за изменений на сайте старое приложение стало нерабочим. Я предусмотрел это и такие малейшие изменения на сайте я смогу спокойно поправить удаленно со своего сервера. Прошу прощения за неудобства.</string>
    <string name="zelo_slide_title_text">Прощай.</string>
    <string name="zero_slide_second_text">А так же не забудьте подписаться на мое сообщество ВКонтаке. Там я публикую информацию об обновлениях.</string>
    <string name="first_slide_title_text">Новый дизайн</string>
    <string name="first_slide_main_text">Полностью обновленный дизайн приложения</string>
    <string name="four_slide_title_text">Начнем</string>
    <string name="four_slide_main_text">Делитесь этим приложение меж всеми студентами коллежа!</string>
    <string name="third_slide_title_text">Новая архитектура</string>
    <string name="third_slide_main_text">Приложение было написано на новый архитектуре с использованием новых возможностей от Google</string>
    <string name="second_slide_title_text">Темы приложения</string>
    <string name="second_slide_main_text">Мы добавили и темную и светлую тему! Так же появились новые цвета</string>

    //welcome page
    //Auth VK

    <string name="password">Password</string>
    <string name="password_s">password</string>
    <string name="login">Login</string>

    <string name="login_info_text">Для входа в аккаунт введите пароль.</string>
    <string name="reg_info_text">Информация о профиле получаена. Придумайте пароль и создайте аккаунт.</string>
    <string name="title_your_id">Your ID</string>
    <string name="title_full_name">Full Name</string>
    <string name="create_account">create account</string>

    //Auth VK
    //Version App

    <string name="version_in_app">v 0.1.3 BETA</string>

    //Version App
    //Color and Theme

    <string name="title_activity_account">AccountActivity</string>
    <string name="appearance">Дизайн</string>
    <string name="title_theme_app">Тема приложения</string>
    <string name="title_color_standart_app">Цвет приложения - Android</string>
    <string name="title_color_dribbble_app">Цвет приложения - Fantastic</string>
    <string name="title_preview_app">Предварительный просмотр</string>
    <string name="apply">Применить</string>
    <string name="title_color_or_app">Цветовые схемы от the.colour.lab</string>
    <string name="sb">Суббота</string>
    <string name="sr">Среда</string>
    <string name="pnpt">Понедельник, вторник, четверг, пятница</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="update_av">Доступно обновление</string>
    <string name="update_text">Очень информативно.</string>
    <string name="update">Обновить</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="update_availib">Обновление</string>
    <string name="review">Отзыв</string>
    <string name="servers">Сервера</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="backdrops">backdrops</string>

    <string name="static_shortcut_disabled_message"> DIS </string>
    <string name="static_shortcut_short_label"> SHORT </string>

    <string name="input_placeholder">Write a message</string>
    //Color and Theme

</resources>
