<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_group">

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.example.application9.HomePageFragments.GroupsHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_schedule_list" />

    <fragment
        android:id="@+id/navigation_time_line"
        android:name="com.example.application9.HomePageFragments.TimeLineFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_time_line" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.application9.HomePageFragments.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_account" />
</navigation>