<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backdrop_account_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_hideable="false">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/allDone_pass"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_fileName="check-animation.json"/>

        <TextView
            android:text="@string/login_info_text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/rounded_dialog"
        android:elevation="16dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/separator" />

        <EditText
            android:id="@+id/edit_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/password_s"
            android:inputType="textPassword"
            android:padding="8dp"
            android:autofillHints="@string/app_name"
            tools:targetApi="o" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="onLoginAccount"
            android:background="@drawable/bg_button"
            android:text="@string/login" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>