<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backdrop_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/allDone"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_fileName="check-animation.json" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reg_info_text"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_dialog"
        android:elevation="16dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/title_your_id"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_uid"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="@string/app_name"
            android:background="@drawable/bg_edit_text"
            android:enabled="false"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/title_full_name"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="@string/app_name"
            android:background="@drawable/bg_edit_text"
            android:enabled="false"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/app_name"
            android:background="@drawable/bg_edit_text"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:targetApi="o"
            tools:ignore="LabelFor" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_button"
            android:onClick="onCreateAccout"
            android:text="@string/create_account" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>